--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
 		"paragonie/halite": "^4.6",
 		"paragonie/sodium_compat": "^1.5",
 		"doctrine/orm": "^2.5",
-		"symfony/property-access": "^4.1|^5.0|^6.0|^7.0",
-		"symfony/dependency-injection": "^4.1|^5.0|^6.0|^7.0",
-		"symfony/yaml": "^4.1|^5.0|^6.0|^7.0",
-		"symfony/http-kernel": "^4.1|^5.0|^6.0|^7.0",
-		"symfony/config": "^4.1|^5.0|^6.0|^7.0"
+		"symfony/property-access": "^7.0",
+		"symfony/dependency-injection": "^7.0",
+		"symfony/yaml": "^7.0",
+		"symfony/http-kernel": "^7.0",
+		"symfony/config": "^7.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^8.0|^9.0",
